--- a/Home/Category-sibar.css
+++ b/Home/Category-sibar.css
@@ -1,4 +1,7 @@
+.category {
+    float: left;
 
+}
 .category-sidebar {
     width: var(--sidebar-w);
     border: 1px solid var(--divider);
@@ -11,7 +14,8 @@
     align-items: center;
     padding: 12px;
     font-weight: 700;
-    border-bottom: 1px solid var(--divider);
+    border-bottom: 1px solid #c8c8c8;
+    width: 230px;
 }
 
 .burger {
@@ -36,6 +40,8 @@
 .category-item {
     padding: 10px 14px;
     gap: 10px;
+    width: 230px;
+    border-radius: 5px;
     border-bottom: 1px solid var(--divider);
     cursor: pointer;
     transition: background 0.15s;
@@ -56,6 +62,7 @@
 }
 .category-item .chevron {
     position: absolute;
+
     right: 10px;
     top: 50%;
     translate: 0 -50%;
@@ -74,17 +81,19 @@
 
 
 .category-item .submenu-panel {
+
     position: absolute;
+    z-index: 99999;
+
     top: 0;
     left: 100%;
     width: min(760px, 70vw);
     height: 420px;                /* tạm thời */
-    background: #fff;
+    background: #ff0000;
     border: 1px solid #e6eaf0;
     border-radius: 8px;
     box-shadow: 0 8px 24px rgba(0,0,0,.08);
-    display: none;                /* ẩn mặc định */
-    z-index: 9;
+    display: none;
 }
 .category-item .chevron:hover + .submenu-panel,
 .category-item .submenu-panel:hover {
