--- a/style/style.css
+++ b/style/style.css
@@ -5,7 +5,6 @@
     padding: 0;
 }
 
-/* Toàn trang */
 body {
     font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
     background-color: #ffffff;
@@ -13,10 +12,9 @@ body {
     line-height: 1.6;
 }
 
-/* Container căn giữa nội dung */
 .container {
     max-width: 1200px;
-    heigth: 1200px;
+    heigth: auto;
     margin: 0 auto;
     padding: 0 20px;
 }
