--- a/Home/Category-sibar.css
+++ b/Home/Category-sibar.css
@@ -1,15 +1,20 @@
 .category {
     float: left;
-
+    position: relative;
+    z-index: 10;
+    margin-top: 5px
 }
 .category-sidebar {
+    position: relative;;
     width: var(--sidebar-w);
     border: 1px solid var(--divider);
     border-radius: 8px;
-    overflow: hidden;
+    z-index: 100;          /* cao hơn */
+
 }
 
 .category-header {
+
     display: flex;
     align-items: center;
     padding: 12px;
@@ -38,6 +43,7 @@
     font-size: 14px;
 }
 .category-item {
+    position: relative;
     padding: 10px 14px;
     gap: 10px;
     width: 230px;
@@ -48,14 +54,14 @@
 }
 
 .category-item img {
-    width: 20px;
-    height: 20px;
+    position: relative;
+    top: 8px;
+    width: 30px;
+    height: 30px;
+    margin: 0 10px 0 0;
     object-fit: contain;
 }
 
-.category-item {
-    transition: all 0.2s ease;
-}
 .category-item:hover {
     background: #f8a7ea;
     transform: translateX(4px);
@@ -81,21 +87,18 @@
 
 
 .category-item .submenu-panel {
-
     position: absolute;
     z-index: 99999;
-
     top: 0;
     left: 100%;
     width: min(760px, 70vw);
     height: 420px;                /* tạm thời */
     background: #ff0000;
     border: 1px solid #e6eaf0;
-    border-radius: 8px;
-    box-shadow: 0 8px 24px rgba(0,0,0,.08);
     display: none;
 }
 .category-item .chevron:hover + .submenu-panel,
 .category-item .submenu-panel:hover {
     display: block;
+
 }
