--- a/Home/HomeProduct.css
+++ b/Home/HomeProduct.css
@@ -1,4 +1,7 @@
 .product {
-    margin:0px 20px auto;
+    margin:0px 200px auto;
+    max-width: 1200px;
     height: auto;
+    position: absolute;
+background-color: white;
 }
