--- a/style/style.css
+++ b/style/style.css
@@ -13,8 +13,9 @@ body {
 }
 
 .container {
-    max-width: 1200px;
-    heigth: auto;
     margin: 0 auto;
     padding: 0 20px;
+    height: 1200px;
+    background-color: #9aa5b1;
+
 }
