--- a/Home/productTypes.css
+++ b/Home/productTypes.css
@@ -10,22 +10,22 @@
 
 }
 .product-type-grid{
-
     width:98%;
     display:grid;
-    border-left:1px solid #9aa5b1;
-    border-top:1px solid #9aa5b1;
     grid-template-columns:repeat(6,1fr); /* 6 cột cố định */
+
 }
 .product-type-card{
+
+    margin:3px;
     position:relative;
     background:#fff;
     border:1px solid #9aa5b1;
-    border-left:none;
-    border-top:none;
+    border-radius: 5px;
+
 
     padding:10px;
-   height:166px;
+   height:160px;
     display:flex;
     flex-direction:column;
     align-items:center;
