--- a/style/style.css
+++ b/style/style.css
@@ -16,6 +16,6 @@ body {
     margin: 0 auto;
     padding: 0 20px;
     height: 1200px;
-    background-color: #9aa5b1;
+    background-color: white;
 
 }
