--- a/Home/Category/Category-sibar.css
+++ b/Home/Category/Category-sibar.css
@@ -8,12 +8,12 @@
 
 }
 .category-sidebar {
-    position: relative;;
+    display: flow-root;
     width: var(--sidebar-w);
     border: 1px solid var(--divider);
-    border-radius: 8px;
-    z-index: 100;          /* cao hơn */
-
+    max-width: 1200px;
+    height: auto;
+    background-color: #ffffff;
 }
 
 .category-header {
