--- a/style/style.css
+++ b/style/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 .container {
-    margin: 0 auto;
+    margin: 0px auto;
     padding: 0 20px;
     height: 1200px;
     background-color: white;
