--- a/Home/Product/HomeProduct.css
+++ b/Home/Product/HomeProduct.css
@@ -1,8 +1,8 @@
 
 .product {
     padding: 0 4px 0 4px;
-    margin:30px 200px auto;
-    max-width: 1200px;
+    margin:30px 180px auto;
+    width: 80%;
     height: auto;
     position: absolute;
 background-color: rgb(247 248 249);
