--- a/style/style.css
+++ b/style/style.css
@@ -13,9 +13,9 @@ body {
 }
 
 .container {
-    margin: 0px auto;
+    margin:0px 180px auto;
     padding: 0 ;
     height: 1200px;
-    background-color: white;
+    background-color: rgb(247 248 249);
 
 }
