--- a/Product_Detail/CSS/ProductDetail.css
+++ b/Product_Detail/CSS/ProductDetail.css
@@ -6,7 +6,7 @@
     --pg-border: #e5e7eb;
     --pg-accent: #2563eb;
     --muted:#64748b;
-    --brand:#0ea5e9;
+    --brand: #ff0000;
     --border:#e5e7eb;
     --green:#16a34a;
 }
