--- a/Product_Detail/CSS/view.css
+++ b/Product_Detail/CSS/view.css
@@ -13,11 +13,11 @@ html, body, .container, .product {
 :root { --header-h: 70px; }   /* nếu header fixed ~70px, bạn có thể chỉnh */
 
 .product-info{
-    padding: 40px 20px 0 20px;
+    padding: 20px 10px 0 10px;
     float: left;
-    padding-right: 30px;
     width: 75%;
     height: auto;
+    background-color: rgba(179, 179, 182, 0.09);
 }
 #viewed-root{
     align-self: flex-start;
