--- a/User/User_home/user_home.css
+++ b/User/User_home/user_home.css
@@ -3,7 +3,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Segoe UI', sans-serif;
+    font-family: 'Roboto', Arial, sans-serif;
+    
 }
 
 /* Layout chính */
