--- a/User/User_sidebar/user_sidebar.css
+++ b/User/User_sidebar/user_sidebar.css
@@ -3,14 +3,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Segoe UI', sans-serif;
+    font-family: 'Roboto', Arial, sans-serif;
+
 }
 
 /* Sidebar */
 .sidebar {
     width: 250px;
     background-color: white;
-    border-right: 1px solid #ddd;
     padding: 20px 0;
 }
 
@@ -38,7 +38,7 @@
 
 .menu {
     list-style: none;
-     height: 100vh;
+    height: 100vh;
 }
 
 .menu li {
