--- a/User/Viewed_products/viewed_products.css
+++ b/User/Viewed_products/viewed_products.css
@@ -1,19 +1,20 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f9f9f9;
+
     margin: 0;
-    color: #333;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto', Arial, sans-serif;
 }
 
 /* Bố cục chính (sidebar + content) */
 .user-container {
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    padding: 30px 60px;
-    gap: 20px;
-    min-height: 80vh;
-    box-sizing: border-box;
+    min-height: calc(100vh - 70px);
+    background: #f8f8f8;
+    gap: 15px;
+    padding: 0 140px;
+    padding-top: 35px;
+    padding-bottom: 8px;
 }
 
 /* Khối nội dung */
