--- a/User/Address/address.css
+++ b/User/Address/address.css
@@ -15,7 +15,7 @@ body {
     min-height: calc(100vh - 70px);
     gap: 15px;
     padding: 0 140px;
-    padding-top: 35px;
+    padding-top: 105px;
     padding-bottom: 8px;
     background-color: #f8f8f8;
 }
@@ -24,8 +24,8 @@ body {
 .content {
     flex: 1;
     background: #fff;
-    border: 1px solid #e0e0e0;
-    border-radius: 6px;
+    /* border: 1px solid #e0e0e0; */
+    /* border-radius: 6px; */
     padding: 20px;
 }
 
