Chỉnh lại cái trạng thái của các page

--- a/User/Profile/profile.css
+++ b/User/Profile/profile.css
@@ -56,8 +56,8 @@
 /* Bảng thông tin */
 .info-table {
   width: 100%;
-  margin-top: 20px;
-  padding: 0 190px;
+  margin-top: -10x;
+  padding: 0px 190px;
 }
 
 .info-row {
