--- a/User/Address/address.css
+++ b/User/Address/address.css
@@ -8,24 +8,20 @@ body {
 
 /* MAIN LAYOUT */
 .container {
-    /* display: flex;
-    padding: 20px 60px; */
     display: flex;
     width: 100%;
     min-height: calc(100vh - 70px);
     gap: 15px;
     padding: 0 140px;
-    padding-top: 105px;
+    padding-top: 35px;
     padding-bottom: 8px;
     background-color: #f8f8f8;
 }
 
 /* CONTENT */
-.content {
+.container .content {
     flex: 1;
-    background: #fff;
-    /* border: 1px solid #e0e0e0; */
-    /* border-radius: 6px; */
+    background: white;
     padding: 20px;
 }
 
@@ -36,13 +32,21 @@ body {
     margin-bottom: 15px;
 }
 
+.content-header h2 {
+    font-size: 18px;
+     font-weight: 100;
+    padding-bottom: 12px;
+    padding: 20px 0px;
+}
+
 .add-address-btn {
-    background: #fff;
-    border: 1px solid #ccc;
+    background: white;
+    border: 1px solid #ddd;
     padding: 8px 12px;
     border-radius: 4px;
     cursor: pointer;
     transition: background 0.2s;
+    font-size: 16px;
 }
 
 .add-address-btn:hover {
@@ -55,4 +59,5 @@ body {
     padding: 25px;
     text-align: center;
     color: #666;
+    cursor: pointer;
 }
